# switchgear-thermal-model

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  PROJECT_GOVERNANCE.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  index.html  mkdocs.yml  objects.inv  prek.toml  pyproject.toml  sitemap.xml  sonar-project.properties  uv.lock.license
.github/: CODEOWNERS  dependabot.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: citations.yml  codeql.yml  ospo-scan.yml  pre-commit.yml  prek.yml  publish.yaml  pytest.yml  reuse-compliance.yaml  run-example-notebook.yaml  uv.yaml
api_reference/architecture/: index.html
api_reference/input_profile/: index.html
api_reference/switchgear/: index.html
api_reference/switchgear_temp/: index.html
docs/: index.md
docs/api_reference/: architecture.md  input_profile.md  switchgear.md  switchgear_temp.md
docs/examples/: quick_start.ipynb  quick_start.ipynb.license
docs/get_started/: about.md  model_input.md
docs/javascripts/: katex.js
docs/theoretical_documentation/: determining_switchgear_parameters.md  model_equations.md
examples/quick_start/: index.html  quick_start.ipynb
get_started/about/: index.html
get_started/model_input/: index.html
img/: exp_heating.png.license
javascripts/: katex.js
search/: search_index.json
stylesheets/: extra.css
switchgear_thermal_model/: __init__.py  switchgear.py  thermal_model.py
switchgear_thermal_model/schemas/: __init__.py  input_profile.py
tests/: conftest.py  test_thermal_model.py  test_thermal_model_profile_input.py
theoretical_documentation/determining_switchgear_parameters/: index.html
theoretical_documentation/model_equations/: index.html
